<resources>
    <string name="app_name">lab2.1Loancalculator</string>
    <string name="vehicle_price">Vehicle price</string>
    <string name="downpayment">downpayment</string>
    <string name="repayment">repayment(month)</string>
    <string name="interest_rate">Interest rate (%)</string>
    <string name="salary">salary</string>
    <string name="calculate">calculate</string>
    <string name="reset">reset</string>
    <string name="monthly_payment">monthly payment:</string>
    <string name="status">Status:</string>
    <string name="close">close</string>


</resources>
